Core:
- Implemented separate access trap handling for DISPLAY1 and DISPLAY2 registers

GSModeSelector releases (at psx-scene)

GSModeSelector v0.37 (2013.01.20) by doctorxyz
GUI:
- 30 predef vmodes, including DTV 576P vmode for older PS2 models and the unpublished DTV 1080P one
- Skip Videos Fix toggle
- Optimized Exit options
- C code housekeeping
Core:
- SetGsCrt replacement code for DTV 576P vmode (work even on older PS2 models - made possible by SP193 and reprep)
- SetGsCrt replacement code for unpublished DTV 1080P vmode (made possible by SP193 and reprep)
- Remove all breakpoints (even when they are not enabled) whenever SetGsCrt syscall is called, then re-enable GSHandler (GSM Data Address Write Breakpoint)
- Skip Videos Fix (sceMpegIsEnd) code - basic method by nachbrenner - If enabled, On-The-Fly patcher applies it whenever SetGsCrt syscall is called 
- Added SMODE1, SMODE2, SRFSH, SYNCH1, SYNCH2 and CSR definitions for future features
- Disabled warning on building time if any statement expands to more than one machine instruction
- ASM code cosmetics

GSModeSelector v0.36b (2013.01.16) by doctorxyz
- GUI can be bootable and relaunchable by FCMB E1 launch keys (due to DeInitGSM, New IOP reboot sequence, simplified Makefile, new Launcher based on uLE v4.42a, ...)

GSModeSelector v0.36(2011.02.26) by doctorxyz and dlanor (compiled by doctorxyz)
(This release was prepared by me having in mind both GSM standalone neeeded code improvements and future OPL integration)
- Simplified OSD: buttons for video modes, SELECT for launch method, PAD for X and Y-axis offset and START to launch
- In order to avoid gsKit issues, now GSM only is enabled only after selecting video mode, launch method and pressing START
- Optimized C and ASM source code, many comments were rewritten
- Fixed the access trap mask method to trap GS registers for all kernel segments
- Implemented x-axis and y-axis offset inside core for better fine tuning on special cases